@@ -2,6 +2,7 @@
 v4.0-cvs
 --------
 
+[mms] Add 'cssfiles' hook to add custom CSS files to a page.
 [jan] Add option to not automatically show all available shares.
 [jan] Add option to disallow world permissions for user shares.
 [mms] Allow Mozilla DNS prefetching to be turned off when displaying untrusted
